demo-nodejs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-nodejs
  labels:
    app: hello-world-nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world-nodejs
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
  template:
    metadata:
      labels:
        app: hello-world-nodejs
    spec:
      containers:
        - name: hello-world-nodejs
          image: patelsaheb/hellonodejs:latest
          ports:

            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    
  name: hello-world-nodejs
spec:
  
  type: ClusterIP
  selector:
    app: hello-world-nodejs
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
