demo-react.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  #the Deployment Name
  name: demo-react-app
spec:
  #the Number of Pods
  replicas: 2
  selector:
    matchLabels:
      app: demo-react-app
  template:
    metadata:
      labels:
        app: demo-react-app
    spec:
      # Container Details
      containers:
      - name: demo-react-app
        # Docker Image
        image: andreanimi/demo-react-app:v1
        resources:
         #cpu and memory limit
          limits:
            memory: "550Mi"
            cpu: "500m"
        ports:
        #the port on which the app can be reached out inside the container
        - containerPort: 80

---
#service 
apiVersion: v1
kind: Service
metadata:
   #the Serivce Name- it should match with the lable name of the deployment 
  name: demo-react-app
spec:
  #type of the service
  type: ClusterIP
  selector:
    app: demo-react-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
