new-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-testing
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - nginx.digivillage.in
    secretName: nginx-digivillage-in-tls
  - hosts:
    - react.digivillage.in
    secretName: react-digivillage-in-tls
  rules:
  - host: nginx.digivillage.in
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-demo
          servicePort: 80
  - host: react.digivillage.in
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-react-app
          servicePort: 80
